crates/wasm-workers/src/workflow/snapshots/workflow_js_step_execution_until_finished@submit_cancel_trimmed_to_1_replay_4.snap
---
source: crates/wasm-workers/src/workflow/workflow_js_worker.rs
expression: "redact_component_digest(serde_json::to_value(&replay).unwrap())"
---
{
  "captured_writes": [
    {
      "AppendFinished": {
        "execution_id": "E_0000000000000000000000000B",
        "version": 5,
        "current_time": "1970-01-01T00:00:00.700Z",
        "retval": {
          "ok": {
            "type": "result<string, string>",
            "value": {
              "ok": "\"done\""
            }
          }
        }
      }
    }
  ]
}
