crates/wasm-workers/src/workflow/snapshots/workflow_js_step_execution_until_finished@trimmed_to_1_advance_2.snap
---
source: crates/wasm-workers/src/workflow/workflow_js_worker.rs
expression: "json!({\n    \"finished\": advance.finished.is_some(), \"requested_captured_writes_len\":\n    requested.captured_writes.len(), \"replayed_captured_writes_len\":\n    replay.captured_writes.len(),\n})"
---
{
  "finished": false,
  "requested_captured_writes_len": 1,
  "replayed_captured_writes_len": 1
}
