crates/wasm-workers/src/workflow/snapshots/workflow_js_step_execution_until_finished@trimmed_to_1_advance_5.snap
---
source: crates/wasm-workers/src/workflow/workflow_js_worker.rs
expression: "json!({\n    \"version\": advance.version.0, \"outcome\": format!(\"{:?}\", advance.outcome),\n    \"trim_to\": trim_to, \"requested_captured_writes_len\":\n    requested.captured_writes.len(), \"replayed_captured_writes_len\":\n    replay.captured_writes.len(),\n})"
---
{
  "version": 6,
  "outcome": "Applied",
  "trim_to": 1,
  "requested_captured_writes_len": 1,
  "replayed_captured_writes_len": 2
}
